--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,9 @@ jobs:
       
       - name: Setup rust toolchain
         uses: actions-rs/toolchain@v1.0.6
+        with:
+          toolchain: stable
+          override: true
       
       - name: Test plugin
         run:  ../gradlew test
