--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,3 +33,7 @@ jobs:
       - name: Build sample
         run: ../gradlew build
         working-directory: sample
+
+      - name: Clean sample
+        run: ../gradlew clean
+        working-directory: sample
