--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,5 +39,5 @@ jobs:
         working-directory: sample
 
       - name: Test sample
-        run: ../gradlew test
+        run: ../gradlew check
         working-directory: sample
